# hercules

./: .clang-format  .gitignore  .test.c.swp  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  c3-slurm-hercules-compilation.sh  client.13-07.1587000-2024-04-16.log--------  output  test  test.c  workers_bad.c
.cache/clangd/index/: arg_parser.c.64830627E625A393.idx  arg_parser.h.58A20105DA439152.idx  arg_parser.h.D07F1A4B9D14C73B.idx  cfg_parse.c.841B0DCA0E6321DC.idx  cfg_parse.h.47FF82C34FDDEDD4.idx  cfg_parse.h.F5CB9DEDA634BD79.idx  comms.c.A3AE619708D7BF87.idx  comms.c.D43A5DDA33D95FDB.idx  comms.h.CD5BC0FA7A463453.idx  comms.h.EBDF03EB1CEFC87C.idx  crc.c.77B13CF74DAFD5A1.idx  crc.h.E4BD5F86964A0D43.idx  crc.h.F4C35D47864A84D0.idx  directory.c.148F48A5E82A755E.idx  directory.c.DAA96A955A34A3FB.idx  directory.h.93707EBACCF0331D.idx  directory.h.CCB2F8C3E81C6F0E.idx  flags.c.770F1C2E1DE58653.idx  flags.c.923EB101F0168ED6.idx  flags.h.0F8E80EAD4195E9B.idx  flags.h.EC73946B1EF61F13.idx  hello_world_util.h.51795E1F92E62A3A.idx  hello_world_util.h.E67F990C686156F6.idx  hercules.cpp.B12094B2DBED7D9A.idx  hercules.cpp.E1F840A678A64EDB.idx  hercules.hpp.10179BD86ED42D25.idx  hercules.hpp.F18A3F9ACB1F439D.idx  imss.c.8A39BB78C4201203.idx  imss.c.8B405C7F13F07FD0.idx  imss.h.6CFF77D565B9152E.idx  imss.h.B84E32783D930672.idx  imss_posix.c.31CE2C0A0E895F0B.idx  imss_posix.c.501AF38B311B6C24.idx  imss_posix.h.C1D410532C544B75.idx  imss_posix.h.EDC7D4AFABF02179.idx  imss_posix_api.c.62F0C9F8F9FD3D45.idx  imss_posix_api.c.73A2993F495C2AF8.idx  imss_posix_api.h.A36249BD422C7232.idx  imss_posix_api.h.AAC8C806886E5FA7.idx  map.cpp.D9AC1BB46F129CFD.idx  (+54 more)
Stuff/: c3-spack-modules.sh  hercules-v1.conf  history_ucx_install_with_multi-thread.txt  ucx18_installation_2025.txt  unito_compilation_modules.sh  unito_compilation_modules_ucx18.sh
app/: CMakeLists.txt  dummy.c  monitor.c  original_overhead.c  server.c
app/.ipynb_checkpoints/: server-checkpoint.c
bash/: BEEGFS_IOR_TEST.sh  BEEGFS_IOR_TEST_STRONG_SCALABILITY.sh  C3_LUSTRE_IOR_TEST_STRONG_SCALABILITY.sh  CRC16b.txt  CRC16b_FPP.txt  CRC64b.txt  CRC64b_FPP.txt  HASH.txt  HASH_FPP.txt  HERCULES_IOR_TEST_MALLEABILITY_ATTACHED_CONFIGFILE_STRONG_SCALABILITY.sh  HERCULES_IOR_TEST_MALLEABILITY_DETACHED_CONFIGFILE_STRONG_SCALABILITY.sh  HERCULES_IOR_TEST_NO_MALL_ATTACHED_CONFIGFILE.sh  HERCULES_IOR_TEST_NO_MALL_ATTACHED_CONFIGFILE_STRONG_SCALABILITY.sh  HERCULES_IOR_TEST_NO_MALL_CONFIGFILE.sh  HERCULES_IOR_TEST_NO_MALL_CONFIGFILE_UNITO.sh  HERCULES_IOR_TEST_NO_MALL_DETACHED_CONFIGFILE_NUM_SERVER.sh  HERCULES_IOR_TEST_NO_MALL_DETACHED_CONFIGFILE_NUM_SERVER_VS_FILESIZE.sh  HERCULES_IOR_TEST_NO_MALL_DETACHED_CONFIGFILE_STRONG_SCALABILITY.sh  HERCULES_TEST_NO_MALL_DETACHED_CONFIGFILE.sh  LOCAL.txt  LOCAL_FPP.txt  LUSTRE_IOR_TEST_STRONG_SCALABILITY.sh  LUSTRE_IOR_TEST_WEAK_SCALABILITY.sh  RR.txt  RR_AND_HASH.txt  RR_FPP.txt  WRITE-AND-READ-TEST.c  c3_ior_lustre_slurm.sh  check-shared-memory-on-servers-nodes.sh  clean-shared-memory-on-servers-nodes.sh  commands.txt  exportBeegfsIORSummary.sh  exportBeegfsIORSummary_read.sh  exportBeegfsIORSummary_write.sh  exportDiskTimes.sh  exportHerculesIORSummary.sh  exportHerculesIORSummary_read.sh  exportHerculesIORSummary_write.sh  exportIORSummary.sh  exportLustreIORSummary.sh  (+17 more)
bash/beefs_scale_strong/: 1.pernode.txt  10.pernode.txt  12.pernode.txt  14.pernode.txt  16.pernode.txt  18.pernode.txt  2.pernode.txt  20.pernode.txt  22.pernode.txt  24.pernode.txt  26.pernode.txt  28.pernode.txt  30.pernode.txt  32.pernode.txt  34.pernode.txt  36.pernode.txt  38.pernode.txt  4.pernode.txt  40.pernode.txt  42.pernode.txt  44.pernode.txt  46.pernode.txt  48.pernode.txt  50.pernode.txt  52.pernode.txt  54.pernode.txt  56.pernode.txt  58.pernode.txt  6.pernode.txt  60.pernode.txt  62.pernode.txt  8.pernode.txt
bash/beefs_scale_weak/: 1.pernode.txt  128.pernode_2.txt  128.pernode_4.txt  128.pernode_8.txt  16.pernode.txt  16.pernode_2.txt  16.pernode_4.txt  16.pernode_8.txt  2.pernode.txt  256.pernode_4.txt  256.pernode_8.txt  32.pernode.txt  32.pernode_2.txt  32.pernode_4.txt  32.pernode_8.txt  4.pernode.txt  4.pernode_2.txt  4.pernode_4.txt  512.pernode_8.txt  64.pernode.txt  64.pernode_2.txt  64.pernode_4.txt  64.pernode_8.txt  8.pernode.txt  8.pernode_2.txt  8.pernode_4.txt  8.pernode_8.txt  x.pernode.txt
bash/tests/: INTEGER_TEST.c  OPEN-READ_ONE_VALUE_AT_A_TIME.f90  WRITE-AND-READ-TEST.c
conf/: hercules-template.conf  hercules.conf  hercules.conf.sample
fuse/: CMakeLists.txt  hierarchical_map.cpp  hierarchical_map.hpp  imss_fuse_api.c  imss_posix_api.c  imss_posix_api.h  imssfs.c  map.cpp  map.hpp  mapprefetch.cpp  mapprefetch.hpp  performance_records.cpp
include/: arg_parser.h  comms.h  directory.h  flags.h  hash_table.h  hello_world_util.h  hercules.h  hercules.hpp  hierarchical_records.hpp  imss.h  imss_posix.h  map_ep.hpp  map_server_eps.hpp  performance_records.hpp  policies.h  records.hpp  redis.h  resolvepath.h  shared_memory.h  slog.h  tempname.h  utils.h  workers.h
scripts/: CMakeCache.txt  MIRAR  check-servers.sh  client_hostfile_1347  cmake_install.cmake  compile_script  data2stop_hostfile  data_hostfile  data_server_hostfile  dump.rdb  hercules  hercules.conf  hercules.conf_1347  hercules_server  hostfile_1347  launch_data.sh  launch_meta.sh  meta_hostfile  meta_server_hostfile  mv_test.sh  run_mdtest.sh  slurm-1347.out
scripts/app/: cmake_install.cmake
scripts/c3/: c3-install-dependencies.sh  c3-load-dependencies.sh  c3-slurm-hercules-compilation.sh
scripts/tools/: cmake_install.cmake
src/: arg_parser.c  comms.c  directory.c  hercules.c  hercules.cpp  hierarchical_records.cpp  imss.c  map_ep.cpp  map_server_eps.cpp  memalloc.c  policies.c  records.cpp  redis.c  save-cwd.c  shared_memory.c  slog.c  stat.cpp  utils.c  workers.c
src/.ipynb_checkpoints/: redis-checkpoint.c
stuff/: c3-commands.txt  c3-slurm-io500-compilation.sh  c3-spack-modules.sh  spack_unito_modules_loaded_v1.txt
tools/: CMakeLists.txt  flags.c  imss_posix.c  mapfd.cpp  mapfd.hpp  mount.c  resolvepath.c
(+78 files in other folders)
